--- a/src/layouts/UserLayout.less
+++ b/src/layouts/UserLayout.less
@@ -5,7 +5,7 @@
   flex-direction: column;
   height: 100vh;
   overflow: auto;
-  background: @layout-body-background;
+  // background: @layout-body-background;
 }
 
 .lang {
@@ -19,20 +19,15 @@
 }
 
 .content {
-  padding: 32px 0;
-  flex: 1;
+  padding: 0px 0px;
 }
 
 @media (min-width: @screen-md-min) {
   .container {
-    background-image: url('https://gw.alipayobjects.com/zos/rmsportal/TVYTbAXWheQpRcWDaDMu.svg');
+    // background-image: url('https://gw.alipayobjects.com/zos/rmsportal/TVYTbAXWheQpRcWDaDMu.svg');
     background-repeat: no-repeat;
     background-position: center 110px;
     background-size: 100%;
-  }
-
-  .content {
-    padding: 32px 0 24px 0;
   }
 }
 
@@ -68,4 +63,13 @@
   color: @text-color-secondary;
   margin-top: 12px;
   margin-bottom: 40px;
+}
+.antd-pro-layouts-user-layout-top {
+  display: none !important;
+}
+.antd-pro-layouts-user-layout-content {
+  padding: 0px !important;
+}
+.antd-pro-layouts-user-layout-top {
+  display: none !important;
 }
