Atif Asim Pushed

--- a/src/pages/User/Login.less
+++ b/src/pages/User/Login.less
@@ -96,9 +96,17 @@
   display: flex;
   justify-content: flex-end;
 }
+.Error {
+  background-color: #df5757;
+  padding: 16px 10px;
+  color: #fff;
+  border-radius: 10px;
+  // display: none;
+}
+
 .Login_right_area_buttom_wrapper_button {
-  height: 70px;
-  width: 176px;
+  height: 50px;
+  width: 146px;
   cursor: pointer;
   border: none;
   background: #007dfa;
@@ -108,12 +116,15 @@
   border-radius: 8px;
   padding: 19px;
 
-  font-size: 22px;
+  font-size: 20px;
   font-weight: 600;
   line-height: 33px;
   letter-spacing: 0em;
   text-align: left;
   color: #ffffff;
+}
+.Login_right_area_buttom_wrapper_button_special {
+  padding-right: 10px !important;
 }
 .Login_right_area_buttom_wrapper_button_job_details {
   background-color: #002140;
